--- a/assets/main.css
+++ b/assets/main.css
@@ -25,6 +25,6 @@ ul li {
 }
 
 .jumbo .title {
-    font-size: 2rem;
+    font-size: 2.5em;
     font-weight: bold;
 }
